--- a/composer.json
+++ b/composer.json
@@ -21,6 +21,15 @@
     "require": {
         "typo3/cms-core": "^9.5.0"
     },
+    "autoload": {
+        "psr-4": {
+            "Bueroparallel\\Pagetree\\": "Classes"
+        }
+    },
+    "replace": {
+        "bp_pagetree": "self.version",
+        "typo3-ter/bp_pagetree": "self.version"
+    },
     "extra": {
         "typo3/cms": {
             "extension-key": "bp_pagetree"
